--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     <title>Online Series Tracker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-	<link rel="stylesheet" href="/stylesheets/show.css">
+	<!--<link rel="stylesheet" href="/stylesheets/show.css">-->
 
     <!-- <script src="js/vendor/es6-shim/es6-shim.min.js"></script> -->
     <script src="js/vendor/zone.js/dist/zone.js"></script>
